Labs for Creating Views that access the Database (lab 12)

--- a/myscrumy/eskayoriadescrumy/views.py.save.1
+++ b/myscrumy/eskayoriadescrumy/views.py.save.1
@@ -2,6 +2,7 @@ from django.http import HttpResponse
 from django.shortcuts import render
 from random import randint
 from .models import GoalStatus, ScrumyGoals, User
+from django.core.exceptions import ObjectDoesNotExist
 
 # Create your views here.
 def index(request):
@@ -16,22 +17,17 @@ def move_goal(request, goal_id):
 
 
 def add_goal(request):
-    myGoalId = randint(1000, 9999)
-
+    myGoalId=randint(1000, 9999)
+    while(ScrumyGoals.objects.get(goal_id=myGoalId) is not None):
+        myGoalId=randint(1000, 9999)
     try:
-       while ScrumyGoals.objects.get(goal_id = myGoalId) is not None:
-          myGoalId = randint(1000, 9999)  
+       obj = ScrumyGoals.objects.get(goal_id=myGoalId)
     except ScrumyGoals.DoesNotExist:
-       goal = ScrumyGoals.objects.create(goal_id = myGoalId, 
-       goal_name = 'Keep Learning Django', created_by = 'Louis', 
-       moved_by = 'Louis', owner = 'Louis', 
-       goal_status = GoalStatus.objects.get(status_name = 'Weekly Goal'), 
-       user = User.objects.get(username = 'Louis Oma'))
-       goal.save()
-     
-    return HttpResponse()
-    
-    
+       ScrumyGoals.objects.create(goal_id=myGoalId, 
+       goal_name='Keep Learning Django', created_by='Louis', 
+       moved_by='Louis', owner='Louis', 
+       goal_status=GoalStatus.objects.get(status_name='Weekly Goal'$
+       user=User.objects.create(username='Louis Oma'))
 
 def home(request):
     goals = ScrumyGoals.objects.filter(goal_name='Keep Learning Django')
