--- a/myscrumy/eskayoriadescrumy/views.py.save.4
+++ b/myscrumy/eskayoriadescrumy/views.py.save.4
@@ -33,32 +33,22 @@ def add_goal(request):
     
 
 def home(request):
-    goal_name = None
-    goal_id = 0
+    goals = None
     user = None
-
     try:
-       goal = ScrumyGoals.objects.get(goal_name="Learn Django")
+       goals = ScrumyGoals.objects.all()
+       user = (ScrumyGoals.objects.get(goal_name="Learn Django")).user
        try:
-          goal_status = GoalStatus.objects.get(status_name="Daily Goal")
-          goal.goal_status = goal_status
-          goal.save()
-
+          goal_status = GoalStatus.objects.all()
        except GoalStatus.DoesNotExist:
-          return HttpResponse()
-
-       goal = ScrumyGoals.objects.get(goal_name="Learn Django")
-       goal_name = goal.goal_name
-       goal_id = goal.goal_id
-       user = goal.user
-
+          return HttpResponse('Unable to load status')
     except ScrumyGoals.DoesNotExist:
-       return HttpResponse()
+       return HttpResponse('Record Not Found!!!')
 
     context = {
-      'goal_name':goal_name,
-      'goal_id':goal_id,
-      'user':user,
+      'goals':goals,
+      'goal_status':goal_status,
+      'user':user
     }
 
     return render(request, 'eskayoriadescrumy/home.html', context)
