--- a/myscrumy/eskayoriadescrumy/views.py.save.5
+++ b/myscrumy/eskayoriadescrumy/views.py.save.5
@@ -37,19 +37,35 @@ def add_goal(request):
     
 
 def home(request):
-    goal = None
+    goal_name = None
+    goal_id = 0
+    user = None
 
     try:
-       goal = ScrumyGoals.objects.get(goal_name = "Learn Django")
+       goal = ScrumyGoals.objects.get(goal_name="Learn Django")
+       user = User.objects.get(username="Louis Oma")
+       user.username='louis'
+ 
+       try:
+          goal_status = GoalStatus.objects.get(status_name="Weekly Goal")
+          goal.goal_status = goal_status
+          goal.save()
+
+       except GoalStatus.DoesNotExist:
+          return HttpResponse()
+
+       goal = ScrumyGoals.objects.get(goal_name="Learn Django")
+       goal_name = goal.goal_name
+       goal_id = goal.goal_id
+       user = goal.user
 
     except ScrumyGoals.DoesNotExist:
        return HttpResponse()
 
     context = {
-      'goal_name':goal.goal_name,
-      'goal_id':goal.goal_id,
-      'user':goal.user,
-      'goal_status':goal.goal_status
+      'goal_name':goal_name,
+      'goal_id':goal_id,
+      'user':user,
     }
 
     return render(request, 'eskayoriadescrumy/home.html', context)
